modules/ingress_routes/templates/ingress-route.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: ${name}
  namespace: ${namespace}
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`${domain}`)
      kind: Rule
      services:
        - name: ${service_name}
          port: ${service_port}
      middlewares:
        - name: ratelimits
          namespace: traefik
    %{ if service_name == "argocd-server" }
    - match: Host(`${domain}`) && HeadersRegexp(`Content-Type`, `application/grpc`)
      kind: Rule
      services:
        - name: ${service_name}
          port: ${service_port}
          scheme: h2c
      middlewares:
        - name: ratelimits
          namespace: traefik
    %{ endif }
  tls:
    certResolver: ${cert_resolver}
